[EMMA-53] Bulk upload - Fixed breakage of .file-upload-action link for "Upload a new file". - Fixed spacing of form element on bulk delete page.

--- a/app/assets/stylesheets/feature/_file_upload.scss
+++ b/app/assets/stylesheets/feature/_file_upload.scss
@@ -427,7 +427,8 @@
     }
 
     // No status bar for bulk upload so extra white space is needed above.
-    .file-bulk-upload-form {
+    .file-bulk-upload-form,
+    .file-bulk-upload-delete {
 
         margin-top:    2rem;
         margin-bottom: -1.5rem;
